--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Build tools for the Shuka website",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "start": "http-server -c-1"
   },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "http-server": "^14.1.1"
   }
 }
